@@ -1,4 +1,6 @@
 ver 0.22.10 (not yet released)
+* protocol
+  - support "albumart" for virtual tracks in CUE sheets
 
 ver 0.22.9 (2021/06/23)
 * database
